--- a/package.json
+++ b/package.json
@@ -9,11 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@extractus/article-extractor": "^7.2.9",
     "@next/font": "13.1.6",
+    "@tanstack/react-query": "^4.24.9",
+    "@tanstack/react-query-devtools": "^4.24.9",
+    "axios": "^1.3.3",
+    "cheerio": "^1.0.0-rc.12",
+    "class-variance-authority": "^0.4.0",
+    "clsx": "^1.2.1",
+    "daisyui": "^2.50.2",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "lucide-react": "^0.115.0",
     "next": "13.1.6",
+    "phosphor-react": "^1.4.1",
+    "puppeteer": "^19.7.2",
+    "puppeteer-extra": "^3.3.4",
+    "puppeteer-extra-plugin-stealth": "^2.11.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-intersection-observer": "^9.4.2",
+    "tailwind-merge": "^1.10.0",
+    "tailwindcss-animate": "^1.0.5",
+    "zustand": "^4.3.3"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwind-scrollbar": "^2.1.0",
+    "tailwindcss": "^3.2.7"
   }
 }
