modified:   .vscode/settings.json 	modified:   package-lock.json 	deleted:    puppeteer.config.cjs 	new file:   src/components/ReadChapter/NextChapter.js 	deleted:    src/pages/api/hello.js 	new file:   src/pages/api/novelup/allchapcherrio/[allchapcherrio].js 	modified:   src/pages/api/novelup/allchapters/[allchapters].js 	modified:   src/pages/api/novelup/chapters/[...chapters].js 	modified:   src/query/useNovelupQuery.js

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,19 @@
 {
     "cSpell.words": [
+        "allchapters",
+        "digg",
         "Dokkoushi",
         "Dokusho",
         "domcontentloaded",
+        "extnu",
         "leecher",
         "lucide",
         "mylist",
         "novelup",
+        "novelupdates",
         "nyaa",
         "nyaapi",
+        "popupreading",
         "recom"
     ]
 }
