modified:   .vscode/settings.json 	modified:   next.config.js 	modified:   package-lock.json 	modified:   package.json 	new file:   prisma/migrations/20230303060319_bookmark/migration.sql 	new file:   prisma/migrations/migration_lock.toml 	new file:   prisma/schema.prisma 	new file:   server/db/client.js 	new file:   src/Loader/MyListLoader.js 	modified:   src/components/Info/Chapters/ChapterInfo.js 	modified:   src/components/Info/Chapters/Chapters.js 	modified:   src/components/Info/InfoPage.js 	modified:   src/components/Info/TopStyle/BookMark.js 	modified:   src/components/MyList/List.js 	modified:   src/components/Navbar/Navbar.js 	modified:   src/components/ReadChapter/SideBar.js 	modified:   src/pages/_app.js 	new file:   src/pages/api/auth/[...nextauth].js 	new file:   src/pages/api/post/bookmark.js 	modified:   src/pages/mylist/index.js 	new file:   src/query/useBookMarkQuery.js 	modified:   src/query/useNovelupQuery.js

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,9 +6,11 @@
         "Dokusho",
         "domcontentloaded",
         "extnu",
+        "firestore",
         "leecher",
         "lucide",
         "mylist",
+        "NEXTAUTH",
         "novelup",
         "novelupdates",
         "nyaa",
