--- a/package.json
+++ b/package.json
@@ -6,21 +6,33 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate:dev": "npx dotenv -e .env.local -- prisma migrate dev",
+    "db:push": "npx dotenv -e .env.local -- prisma db push",
+    "migrate:reset": "npx dotenv -e .env.local -- prisma migrate reset",
+    "db:seed": "npx dotenv -e .env.local -- prisma db seed",
+    "prisma:generate": "npx dotenv -e .env.local -- prisma generate",
+    "prisma:studio": "npx dotenv -e .env.local -- prisma studio",
+    "production:build": "npx prisma generate && npx prisma migrate deploy && next build"
   },
   "dependencies": {
     "@extractus/article-extractor": "^7.2.9",
+    "@next-auth/prisma-adapter": "^1.0.5",
     "@next/font": "13.1.6",
+    "@prisma/client": "^4.11.0",
     "@tanstack/react-query": "^4.24.9",
     "@tanstack/react-query-devtools": "^4.24.9",
+    "axios": "^1.3.4",
     "cheerio": "^1.0.0-rc.12",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "daisyui": "^2.50.2",
+    "dotenv-cli": "^7.0.0",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "lucide-react": "^0.115.0",
     "next": "13.1.6",
+    "next-auth": "^4.20.0",
     "phosphor-react": "^1.4.1",
     "puppeteer": "^19.7.2",
     "puppeteer-extra": "^3.3.4",
@@ -36,6 +48,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
+    "prisma": "^4.11.0",
     "tailwind-scrollbar": "^2.1.0",
     "tailwindcss": "^3.2.7"
   }
