modified:   .vscode/settings.json 	new file:   public/flower.png 	modified:   src/Loader/MyListLoader.js 	modified:   src/components/Info/TopStyle/BookMark.js 	modified:   src/components/Info/TopStyle/Creator.js 	modified:   src/components/Navbar/Navbar.js 	modified:   src/pages/_app.js 	new file:   src/pages/auth/signin.js 	modified:   src/pages/mylist/index.js

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "cSpell.words": [
+        "addis",
         "allchapters",
+        "deleteis",
         "digg",
         "Dokkoushi",
         "Dokusho",
@@ -16,6 +18,7 @@
         "nyaa",
         "nyaapi",
         "popupreading",
-        "recom"
+        "recom",
+        "signin"
     ]
 }
